--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
 			<artifactId>google-oauth-client-servlet</artifactId>
 			<version>1.19.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		
 		<!-- <dependency> <groupId>com.google.api-client</groupId> <artifactId>google-api-client</artifactId> 
 			<version>1.19.1</version> </dependency> -->
 	</dependencies>
