--- a/src/main/resources/env-development.properties
+++ b/src/main/resources/env-development.properties
@@ -11,4 +11,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#server.port=8080
+server.port=9090
