--- a/src/main/resources/env-development.properties
+++ b/src/main/resources/env-development.properties
@@ -5,10 +5,13 @@
 database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/collegeDays
 database.username=root
-database.password=mayank
+database.password=abhishek
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=9090
+#mongo support
+mongo.host=localhost
+mongo.port=27017
