--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,14 @@
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="WebApp_ID" version="2.5">
 
-<!-- <filter>
+<filter>
         <filter-name>CORSFilter</filter-name>
-        <filter-class>com.userserice.filter.CORSFilter</filter-class>
+        <filter-class>com.userservice.filter.CORSFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>CORSFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping> -->
+    </filter-mapping>
     
   <display-name>Archetype Created Web Application</display-name>
 </web-app>
