--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,10 @@
 			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
 			<version>2.1.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>UserService</finalName>
