--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -35,3 +35,14 @@ mail.smtp.starttls.enable=true
 
 # Messages
 application.message: College Days App
+
+
+
+#Google Api Info
+
+ClientId=499548403748-miu0kv8trq11qivv3kb49dqvb8t5lpdu.apps.googleusercontent.com
+Secret=o6RcFBqul-zSKQo2CP0BI2xX
+
+server.port=8090
+
+
