--- a/src/main/resources/env-development.properties
+++ b/src/main/resources/env-development.properties
@@ -5,7 +5,7 @@
 database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/collegeDays
 database.username=root
-database.password=abhishek
+database.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=update
